# app/Http/Controllers/Controller.php
@@ -23,11 +23,6 @@ use Illuminate\Routing\Controller as BaseController;
  * @OA\Server(
  *      url=L5_SWAGGER_CONST_HOST,
  *      description="Project Manager API Server"
- * )
- *
- * @OA\Tag(
- *     name="Projects",
- *     description="API Endpoints of Projects"
  * ),
  *
  * @OA\SecurityScheme(
