# routes/api.php
@@ -32,6 +32,7 @@ Route::group([
     Route::post('/projects', [ProjectController::class, 'addProject']);
     Route::patch('/projects/{project}', [ProjectController::class, 'updateProject']);
     Route::patch('/projects/{project}/{action}', [ProjectController::class, 'updateProjectStatus']);
+    Route::delete('/projects/{project}/{type}', [ProjectController::class, 'deleteProject']);
 
     // task routes
     Route::get('/projects/{project}/tasks', [TaskController::class, 'getProjectTasks']);
